Add Pinata-compatible API endpoints

--- a/stomata/stomata.cfg
+++ b/stomata/stomata.cfg
@@ -6,6 +6,8 @@ ADMIN_EMAIL = "admin@example.com"
 APP_NAME = "stomata"
 IP = "127.0.0.1"
 PORT = 5000
+STOMATA_API_KEY = "Foo"
+STOMATA_SECRET_API_KEY = "Bar"
 SQLALCHEMY_DATABASE_URI = "postgresql://lvfs:lvfs@localhost/stomata"
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 SQLALCHEMY_ENGINE_OPTIONS = {
