--- a/mypy.ini
+++ b/mypy.ini
@@ -6,5 +6,7 @@ no_implicit_optional = True
 ignore_missing_imports = True
 [mypy-sqlalchemy.orm.exc.*]
 ignore_missing_imports = True
+[mypy-ipfshttpclient.*]
+ignore_missing_imports = True
 [mypy-flask_sqlalchemy.*]
 ignore_missing_imports = True
