Add support for export control

--- a/stomata/stomata.cfg
+++ b/stomata/stomata.cfg
@@ -18,3 +18,4 @@ SQLALCHEMY_ENGINE_OPTIONS = {
 # this is only for testing, to avoid needing SSL when using http://localhost/
 SESSION_COOKIE_SECURE = False
 REMEMBER_COOKIE_SECURE = False
+BANNED_COUNTRY_CODES = ["CU", "IR", "KP", "SY", "SD"]
